--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "assimelha",
   "license": "MIT",
-  "repository": "assimelha/native-react",
+  "repository": "usenative/native-react",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
